--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Escrevendo as Classes de Um Jogo</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
